# kaiaai_web

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: web_server.yaml
kaiaai_python/: .server.py.swp  kaia-face.min.js  server.py  webcam_pub.py  webcam_sub.py
launch/: web_server.launch.py
public/: client.js  face.html  face_demo.html  index.html  webrtc_demo.html
public/js/: client.js  fabric.min.js
scripts/: run_ssl.sh  ssl_proxy.sh
