<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kaiaai_web</name>
  <version>0.0.0</version>
  <description>Kaia.ai web stack</description>
  <maintainer email="iliao@kaia.ai">Ilia O.</maintainer>
  <url type="website">https://kaia.ai</url>
  <url type="repository">https://github.com/kaiaai/kaiaai_web</url>
  <url type="bugtracker">https://github.com/kaiaai/kaiaai_web/issues</url>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <!--depend>opencv2</depend-->
  <!--depend>opencv-python</depend-->
  <depend>python3-opencv</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
